Code refactored  based on SonarQube analysis